--- a/src/app/modules/homepage-v2/homepage-v2.component.scss
+++ b/src/app/modules/homepage-v2/homepage-v2.component.scss
@@ -245,14 +245,16 @@ m-homepage__v2 {
 
               &:active,
               &:focus {
+                outline: none;
                 @include m-theme() {
-                  outline: 1px solid themed($m-blue);
+                  border: 1px solid themed($m-blue);
                 }
               }
 
               &.ng-invalid.ng-touched:not(.ng-pristine) {
+                outline: none;
                 @include m-theme() {
-                  outline: 1px solid themed($m-red);
+                  border: 1px solid themed($m-red);
                 }
               }
             }
