--- a/src/app/modules/onboarding-v2/page/onboarding.component.scss
+++ b/src/app/modules/onboarding-v2/page/onboarding.component.scss
@@ -270,7 +270,8 @@ m-onboarding {
             width: 100%;
             height: 36px;
             border: 1px solid #e8e8e8;
-            font-size: 14px;
+            font-size: 16px;
+            line-height: 21px;
             padding-left: 8px;
             margin-bottom: 8px;
 
@@ -306,7 +307,8 @@ m-onboarding {
                   width: 100%;
                   padding-left: 8px;
 
-                  font-size: 14px;
+                  font-size: 16px;
+                  line-height: 21px;
 
                   @include m-theme() {
                     color: themed($m-grey-800);
@@ -314,15 +316,25 @@ m-onboarding {
 
                   &:active,
                   &:focus {
-                    outline: 1px solid #4a90e2;
+                    outline: none;
+                    @include m-theme() {
+                      border: 1px solid themed($m-blue);
+                    }
                   }
 
                   &.m-onboardingInput__error {
-                    outline: 1px solid #d0021b;
+                    outline: none;
+                    @include m-theme() {
+                      border: 1px solid themed($m-red);
+                    }
                   }
                 }
               }
             }
+          }
+
+          m-date__dropdowns {
+            max-width: 294px;
           }
 
           .mdl-spinner {
